--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "universal-edge-tts": "^1.3.3",
+    "edge-tts-universal": "^1.3.3",
     "vercel": "^50.4.5",
     "wav": "^1.0.2",
     "zod": "^3.24.2"
